--- a/pytorch-tutorial/pytorch-onnx-tutorial/pyproject.toml
+++ b/pytorch-tutorial/pytorch-onnx-tutorial/pyproject.toml
@@ -11,6 +11,7 @@ onnx = "^1.15.0"
 onnxscript = "^0.1.0.dev20240203"
 torch = "^2.2.0"
 packaging = "^23.2"
+onnxruntime = "^1.17.0"
 
 
 [build-system]
